# brgen

./: .clang-format  .clang-tidy  .clangd  .gitignore  .licensed.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.base.md  README.ja.md  README.md  SECURITY.md  arch.md  brgen.json  brgen.sln  build.bat  build.py  build.sh  build_all.bat  build_config.template.json  clean.bat  docker-compose.yml  dockerfile  go.mod  go.sum  ignoresample.json  langspec.md  opencode.jsonc  renovate.json  summary.jsonl  test-brgen.json  test.bat
astlib/ast2rust/core/: Cargo.toml
rebrgen/: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  build_config.template.json  commands.md  mise.toml  run_deprecated.bat
rebrgen/.clinerules/: current_development_phase.md  development_cycle.md  important_note.md  what_is_brgen.md
rebrgen/.github/: dependabot.yml
rebrgen/.github/workflows/: build.yaml  scorecard.yml
rebrgen/ai_test/: dsl.txt  dsl2.txt  dsl3.txt  dsl4.txt  dsl_codegen1.py  dsl_codegen2.py  dsl_codegen3.py  dsl_codegen4.py  dsl_codegen5.py  dsl_codegen6.py
rebrgen/codeql-queries/: README.md  codeql-pack.lock.yml  escaped-ref-capture-review.ql  escaped-ref-capture.ql  maybe-missing.ql  qlpack.yml
rebrgen/docs/decisions/: 0001-is-mutable-in-ebm.md  0002-generics-pre-monomorphize.md  0003-ast-ir-code-pipeline.md  0004-ebm-defined-in-bgn.md  0005-ebmcg-ebmip-separation.md  0006-maybe-macro-error-handling.md  0007-e2e-test-over-unittest.md  0008-update-offset-rejected.md  0009-ebmcodegen-class-based-evolution.md  0010-ctx-get-field-api.md  0011-lowered-io-statements.md  0012-weak-statement-ref.md  0013-interactive-query-engine.md  0014-rebrgen-cpp23.md  0015-rebrgen-integration.md  0016-default-codegen-visitor.md  0017-transform-passes.md  0018-bgn-syntax-choices.md  0019-codegen-unified-cpp.md  0020-few-dependency-core.md  0021-positioning-among-idl-tools.md  0022-few-runtime-dependency.md  0023-ecosystem-deprioritized.md  0024-ebm2ascii-placement.md  0025-no-hardcoded-language-list.md  0026-scope-cutting-as-survival-strategy.md  0027-inner-anon-accessor-relocation.md  0028-derive-property-init-check-chain.md  0029-emit-struct-methods-granular.md  0030-visitor-to-custom-rename.md  0031-variant-type-emission-backend-responsibility.md  0032-field-store-marker-streaming.md  0033-assert-context-dependent-lowering.md  0034-mutation-analysis-borrow-vs-own.md  0035-range-equal-expression.md  0036-unictest-history-store.md  0037-bufread-propagation-up-decode-callgraph.md  0038-subrange-alignment-uses-absolute-offset.md  0039-runtime-state-companion-struct.md  0040-until-eof-termination-by-offset-check.md  (+7 more)
rebrgen/docs/draft/: consolidation_notes.md
rebrgen/docs/en/: concepts_guidelines.md  current_status.md  development_setup.md  inconsistencies_notes.md  index.md  io_data_semantics.md  magic_access_path.md  project_overview.md  script_reference.md  structured_fuzzing.md  testing_verification.md  visitor_hooks_and_dsl.md  working_with_ebm_codegen.md
rebrgen/docs/gemini/: 25-12-28-conversation.md  access_api_documentation.md  conversation_summary.md
rebrgen/docs/ja/: concepts_guidelines.md  development_setup.md  inconsistencies_notes.md  index.md  magic_access_path.md  project_overview.md  script_reference.md  testing_verification.md  visitor_hooks_and_dsl.md  working_with_ebm_codegen.md
rebrgen/docs/old/: abstract_ops.json  architecture.md  binary_module.md  bm2python_hooks.md  complexity_reduction_plan.md  hook_file_templates.md  refactoring_plan.md  template_parameters.md  words.md
rebrgen/script/: auto_setup.py  build.bat  build.ps1  build.py  build.sh  diff_unictest_history.py  ebm2jsonschema.py  ebm2td.py  ebm2z3.py  ebmcodegen.py  ebmdsl.py  ebmexpand.py  ebmop.py  ebmtemplate.py  ebmtemplate_ip.py  ebmtest.py  ebmtest_lang_config.en.json  ebmtest_lang_config.ja.json  extract_enum.py  list_unictest_runners.py  list_unictest_shards.py  merge_unictest_results.py  netlink_convert.py  record_unictest_history.py  render_unictest_summary.py  setup_runner_deps.py  split_dot.py  unictest.py  unictest_report.py  unictest_setup.py  update_ebm.py  util.py
rebrgen/script/bm/: binary_module.bat  binary_module.ps1  collect_cmake.py  gen_template.bat  gen_template.ps1  gen_template.py  gen_template.sh  generate.bat  generate.ps1  generate.py  generate.sh  generate_golden_master.py  generate_test_glue.py  generate_web_glue.py  list_lang.py  run_cmptest.bat  run_cmptest.ps1  run_cmptest.py  run_cmptest.sh  run_cycle.bat  run_cycle.ps1  run_cycle.py  run_cycle.sh  run_generated.bat  run_generated.ps1  run_generated.py  run_generated.sh  test_compatibility.py
rebrgen/src/ebm/: ebm.ps1  ebm.py  extended_binary_module.bgn  extended_binary_module.cpp  extended_binary_module.hpp  extended_binary_module.md  extended_binary_module_zc.cpp  extended_binary_module_zc.hpp
rebrgen/src/ebmcg/: CMakeLists.txt
rebrgen/src/ebmcodegen/: access.cpp  (+5 more)
rebrgen/test/: inputs.json  inputs_utf8.json  unictest.json
src/: CMakeLists.txt
src/ast/: ast.cpp  ast.h  expr_layer.h  stream.h  test.cpp  test_component.cpp  test_component.h
src/ebm/: extended_binary_module.bgn  extended_binary_module.cpp  extended_binary_module.hpp  extended_binary_module_zc.cpp  extended_binary_module_zc.hpp
src/ebmcg/: CMakeLists.txt
src/ebmcodegen/: class_based.cpp  main.cpp
src/ebmgen/: access_helper.hpp  json_conv.cpp  json_conv.hpp  main.cpp  stdin.hpp
src/lexer/: lexer.h  token.h
src/parser/: stream.h
src/request/: generator.hpp  stream.hpp
src/step/: step3.bgn  step5.bgn  step7.bgn
src/test/: CMakeLists.txt  ast_test.cpp  ast_test_component.cpp  ast_test_component.h  from_json_test.cpp  lexer_test.cpp  middle_test.cpp  section_writer_test.cpp  simple_case.bgn  treeopt_test.cpp  typing_test.cpp
src/test_tool/: main.go
src/tool/: src2json.cpp
src/treeopt/: call_extract.h  test.cpp
src/vm/: compile.cpp  compile.h  extract_call.cpp  test.cpp  vm.cpp  vm.h  vm_enum.h
src/writer/: context.h  writer.h
(+1897 files in other folders)
